--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,65 +15,63 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Microservice precompiler</h1>
-        <p class="header">Compiles Javascripts and Stylesheets and creates HTML pages from templates into a distribution folder ready for deployment.</p>
+        <h1>Microservice precompiler</h1>
+        <p>Compiles Javascripts and Stylesheets and creates HTML pages from templates into a distribution folder ready for deployment.</p>
+
+        <p class="view"><a href="https://github.com/barnabyalter/microservice_precompiler">View the Project on GitHub <small>barnabyalter/microservice_precompiler</small></a></p>
+
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/barnabyalter/microservice_precompiler/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/barnabyalter/microservice_precompiler/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/barnabyalter/microservice_precompiler">View On GitHub</a></li>
+          <li><a href="https://github.com/barnabyalter/microservice_precompiler/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/barnabyalter/microservice_precompiler/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/barnabyalter/microservice_precompiler">View On <strong>GitHub</strong></a></li>
         </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/barnabyalter">barnabyalter</a></p>
-
-
       </header>
       <section>
-        <h1>MicroservicePrecompiler</h1>
+        <h1>
+<a id="microserviceprecompiler" class="anchor" href="#microserviceprecompiler" aria-hidden="true"><span class="octicon octicon-link"></span></a>MicroservicePrecompiler</h1>
 
-<p><a href="https://travis-ci.org/barnabyalter/microservices_precompiler"><img src="https://api.travis-ci.org/barnabyalter/microservice_precompiler.png" alt="Build Status"></a>
+<p><a href="https://travis-ci.org/barnabyalter/microservice_precompiler"><img src="https://api.travis-ci.org/barnabyalter/microservice_precompiler.png" alt="Build Status"></a>
 <a href="https://gemnasium.com/barnabyalter/microservice_precompiler"><img src="https://gemnasium.com/barnabyalter/microservice_precompiler.png" alt="Dependency Status"></a>
-<a href="https://codeclimate.com/github/barnabyalter/microservice_precompiler"><img src="https://codeclimate.com/badge.png" alt="Code Climate"></a></p>
+<a href="https://codeclimate.com/github/barnabyalter/microservice_precompiler"><img src="https://codeclimate.com/github/barnabyalter/microservice_precompiler.png" alt="Code Climate"></a>
+<a href="http://badge.fury.io/rb/microservice_precompiler"><img src="https://badge.fury.io/rb/microservice_precompiler.png" alt="Gem Version"></a>
+<a href="https://coveralls.io/r/barnabyalter/microservice_precompiler"><img src="https://coveralls.io/repos/barnabyalter/microservice_precompiler/badge.png?branch=master" alt="Coverage Status"></a></p>
 
-<p>The microservice precompiler uses a handful of technologies to compile Javascripts and Stylesheets and create HTML pages from templates into a distribution folder ready for deployment. The microservices used are CoffeeScript, SASS and Mustache, compiling and minifying (where possible) into Javascript, CSS and HTML, respectively.</p>
+<p>The microservice precompiler uses a handful of technologies to compile Javascripts and Stylesheets and create HTML pages from templates into a distribution folder ready for deployment. The so-called "microservices" used are CoffeeScript, SASS and Mustache, compiling and minifying (where possible) into Javascript, CSS and HTML, respectively.</p>
 
-<p>The SASS is compiled into CSS via Compass; the CoffeeScript is translated to Javascript via Sprockets; both CSS and JS have their dependency trees included in-file by Sprockets; CSS and JS are then minified and compressed via YUICompressor and Uglifier, respectively. </p>
+<p>The SASS (or SCSS) is compiled into CSS via Compass; the CoffeeScript is translated to Javascript via Sprockets; both CSS and JS have their dependency trees included in-file by Sprockets; CSS and JS are then minified and compressed via YUICompressor and Uglifier, respectively.</p>
 
 <p>The gem requires that your project root be a Compass project and expects that you have a folder structure matching the following in the root of your project:</p>
 
-<pre><code>/javascripts/ 
-/sass/
-/templates/
+<pre><code>javascripts/
+sass/
+templates/
 mustaches.yml
 </code></pre>
 
-<p>Where javascripts contains your Coffee, sass contains your SASS, templates contains a folder structure matching your mustaches.yml file for building out pages from mustache templates. </p>
+<p>Where javascripts/ contains your Coffee, sass/ contains your SASS, and templates contains a folder structure matching your mustaches.yml file for building out pages from mustache templates (see below).</p>
 
-<h2>Installation</h2>
+<h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-<p>Add this line to your application's Gemfile:</p>
+<p>To use with bundler add this to your Gemfile:</p>
 
 <pre><code>gem 'microservice_precompiler'
 </code></pre>
 
-<p>And then execute:</p>
-
-<pre><code>$ bundle
-</code></pre>
-
-<p>Or install it yourself as:</p>
+<p>Or install it yourself:</p>
 
 <pre><code>$ gem install microservice_precompiler
 </code></pre>
 
-<h2>Usage</h2>
+<h2>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h2>
 
-<p>To build all assets and templates into the distribution (./dist by default) folder, you can run the following from your application or rake:</p>
+<p>To build all assets and templates into the distribution (./dist by default) folder:</p>
 
-<pre><code>require 'microservice_precompiler'
-precompiler = MicroservicePrecompiler::Builder.new
-precompiler.compile
-</code></pre>
+<div class="highlight highlight-ruby"><pre><span class="pl-k">require</span> <span class="pl-s"><span class="pl-pds">'</span>microservice_precompiler<span class="pl-pds">'</span></span>
+precompiler <span class="pl-k">=</span> <span class="pl-c1">MicroservicePrecompiler</span>::<span class="pl-c1">Builder</span>.<span class="pl-k">new</span>
+precompiler.compile</pre></div>
 
 <p>Or with initialize options:</p>
 
@@ -82,7 +79,7 @@ precompiler.compile
 precompiler = MicroservicePrecompiler::Builder.new
 precompiler.project_root = "."
 precompiler.build_path = "dist"
-precompiler.mustaches_config = "mustaches.yml"
+precompiler.mustaches_filename = "mustaches.yml"
 precompiler.compile
 </code></pre>
 
@@ -98,16 +95,17 @@ precompiler.sprockets_build
  precompiler.mustache_build
 </code></pre>
 
-<h3>SASS and CoffeeScript</h3>
+<h3>
+<a id="sass-and-coffeescript" class="anchor" href="#sass-and-coffeescript" aria-hidden="true"><span class="octicon octicon-link"></span></a>SASS and CoffeeScript</h3>
 
 <p>These two parts are pretty simple. They are contained within their relevant directories and are written in their respective technologies. Because Sprockets is used to compile them the folders may contain subfolders which are automatically included in-line if the following line is present in a top-level file (where dependencies is the name of the subfolder you wish to include):</p>
 
-<pre><code>/*
- *=require_tree ./dependencies
- */
-</code></pre>
+<div class="highlight highlight-coffee"><pre><span class="pl-k">/*</span>
+ <span class="pl-k">*=</span>require_tree .<span class="pl-k">/</span>dependencies
+ <span class="pl-k">*/</span></pre></div>
 
-<h3>Mustache templating</h3>
+<h3>
+<a id="mustache-templating" class="anchor" href="#mustache-templating" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mustache templating</h3>
 
 <p>The mustache builder requires you to provide a template file and a logic file from which to build the template. You can create a complex folder structure in the templates directory as long as it's logic is matched in the mustaches.yml config file. An example of the mustaches.yml follows:</p>
 
@@ -130,7 +128,10 @@ precompiler.sprockets_build
 ** For example, Sample and Sample1 are two logic files which implement a mustache template called Sample.</li>
 <li>If one of the logic files is itself a hash it is assumed to be a directory. The mustache builder will treat this the same as the top level directory, reading the array of template file hashes with their array of logic files.
 ** In the above example, SampleFolder is a folder which contains a mustache template called Sample2 and a logic file Sample2 which implements the template Sample2. The following SampleFolder with only Sample2 beneath is does the same thing.</li>
-</ul><h2>Contributing</h2>
+</ul>
+
+<h2>
+<a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing</h2>
 
 <ol>
 <li>Fork it</li>
@@ -139,12 +140,15 @@ precompiler.sprockets_build
 <li>Push to the branch (<code>git push origin my-new-feature</code>)</li>
 <li>Create new Pull Request</li>
 </ol>
+
+<p><a href="https://bitdeli.com/free" title="Bitdeli Badge"><img src="https://d2weczhvl823v0.cloudfront.net/barnabyalter/microservice_precompiler/trend.png" alt="Bitdeli Badge"></a></p>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p>This project is maintained by <a href="https://github.com/barnabyalter">barnabyalter</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+    <script src="javascripts/scale.fix.js"></script>
+    
   </body>
 </html>
